[ADD] Front end dinamico desde backend
